# cpp-cross-platform-example

./: .gitignore  CMakeLists.txt  README.md
end-test/simple-test/: CMakeLists.txt  main.cpp
include/MyStandaloneUELibrary/: MyLibraryHeader.h
src/: MyLibraryImplementation.cpp
